Fixed layout on mobile devices

--- a/main.css
+++ b/main.css
@@ -10,4 +10,5 @@
 
 .container img {
     margin: 16px;
+    max-width: calc(100vw - 20px);
 }
